--- a/emails/testemail/html.pug
+++ b/emails/testemail/html.pug
@@ -28,7 +28,8 @@ head
     border-collapse: separate;
     mso-table-lspace: 0pt;
     mso-table-rspace: 0pt;
-    width: 100%; }
+    width: 100%;
+    }
     table td {
     font-family: sans-serif;
     font-size: 14px;
@@ -132,9 +133,11 @@ head
     ------------------------------------- */
     .btn {
     box-sizing: border-box;
-    width: 100%; }
-    .btn > tbody > tr > td {
-    padding-bottom: 15px; }
+    width: 100%;
+    }
+    .btn>tbody>tr>td {
+    padding-bottom: 15px;
+    }
     .btn table {
     width: auto;
     }
@@ -302,6 +305,9 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
     td &nbsp;
     td.container
       .content
+        center
+          img(src='https://w7.pngwing.com/pngs/361/627/png-transparent-leaf-logo-green-leaves-green-and-teal-leaf-logo-text-maple-leaf-grass.png' width='80')
+        br
         // START CENTERED WHITE CONTAINER
         table.main(role='presentation')
           // START MAIN CONTENT AREA
@@ -310,6 +316,7 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
               table(role='presentation' border='0' cellpadding='0' cellspacing='0')
                 tr
                   td
+                    h1 Loream lipsum
                     p Hi there,
                     p
                       | Sometimes you just want to send a simple HTML email with a simple design and clear call to action. This is it.
@@ -340,7 +347,7 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
             tr
               td.content-block.powered-by
                 | Powered by
-                a(href='http://htmlemail.io') HTMLemail
+                a(href='http://htmlemail.io') HTMLemail |
                 | .
         // END FOOTER
     td &nbsp;
