--- a/emails/testemail/html.pug
+++ b/emails/testemail/html.pug
@@ -15,7 +15,7 @@ head
     }
     body {
     background-color: #f6f6f6;
-    font-family: sans-serif;
+    font-family: 'Google Sans';
     -webkit-font-smoothing: antialiased;
     font-size: 14px;
     line-height: 1.4;
@@ -147,8 +147,8 @@ head
     text-align: center;
     }
     .btn a {
-    background-color: #ffffff;
-    border: solid 1px #3498db;
+    background-color: #fe696a;
+    border-color: #fe696a;
     border-radius: 5px;
     box-sizing: border-box;
     color: #3498db;
@@ -165,8 +165,8 @@ head
     background-color: #3498db;
     }
     .btn-primary a {
-    background-color: #3498db;
-    border-color: #3498db;
+    background-color: #fe696a;
+    border-color: #fe696a;
     color: #ffffff;
     }
     /* -------------------------------------
@@ -347,7 +347,7 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
             tr
               td.content-block.powered-by
                 | Powered by
-                a(href='http://htmlemail.io') HTMLemail |
+                a(href='http://htmlemail.io') HTMLemail | !{locals.year}
                 | .
         // END FOOTER
     td &nbsp;
