--- a/emails/testemail/html.pug
+++ b/emails/testemail/html.pug
@@ -306,7 +306,7 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
     td.container
       .content
         center
-          img(src='https://w7.pngwing.com/pngs/361/627/png-transparent-leaf-logo-green-leaves-green-and-teal-leaf-logo-text-maple-leaf-grass.png' width='80')
+          img(src='https://www.reactnodeecommerce.cloud/myimages/logo.png' width='200')
         br
         // START CENTERED WHITE CONTAINER
         table.main(role='presentation')
@@ -346,8 +346,8 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
                 | .
             tr
               td.content-block.powered-by
-                | Powered by
-                a(href='http://htmlemail.io') HTMLemail | !{locals.year}
+                |
+                a(href=locals.mainfooter_link) !{locals.mainfooter}
                 | .
         // END FOOTER
     td &nbsp;
