--- a/emails/user_send_password_reset_link/html.pug
+++ b/emails/user_send_password_reset_link/html.pug
@@ -110,7 +110,6 @@ head
     font-size: 35px;
     font-weight: 300;
     text-align: center;
-    text-transform: capitalize;
     }
     p,
     ul,
@@ -319,18 +318,26 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
                 tr
                   td
                     h1
-                      center Verify Its you
-                    h2.names2 Hi there,
+                      center Password Reset
+                    h2.names2 Hi !{locals.username},
                     p
-                      | Thank you for signing up for !{locals.websitename}, to get started, we need to verify your email address.
-                    p
-                      | Please activate your account use this code below.
-                    h2
-                      b
-                        center !{locals.emailverificationcode}
+                      | A request has been received to change the password for your account.
+                    table.btn.btn-primary(role='presentation' border='0' cellpadding='0' cellspacing='0')
+                      tbody
+                        tr
+                          td(align='left')
+                            table(role='presentation' border='0' cellpadding='0' cellspacing='0')
+                              tbody
+                                tr
+                                  td
+                                    a(href=locals.resetlink target='_blank') Reset Password
+                    p or
 
+                    a(href=locals.resetlink target='_blank') !{locals.resetlink}
+                    br
+                    br
                     p If you have any questions about your account or any other matter, please feel free to contact us at
-                    a(href=`mailto:`+locals.helpemail) !{locals.helpemail}
+                    a(href=locals.helpemail) !{locals.helpemail}
           // END MAIN CONTENT AREA
         // END CENTERED WHITE CONTAINER
         // START FOOTER
