--- a/emails/user_send_thanks_for_registration/html.pug
+++ b/emails/user_send_thanks_for_registration/html.pug
@@ -110,7 +110,6 @@ head
     font-size: 35px;
     font-weight: 300;
     text-align: center;
-    text-transform: capitalize;
     }
     p,
     ul,
@@ -319,15 +318,10 @@ table.body(role='presentation' border='0' cellpadding='0' cellspacing='0')
                 tr
                   td
                     h1
-                      center Verify Its you
-                    h2.names2 Hi there,
+                      center Thanks for signing up
+                    h2.names2 Hi !{locals.username},
                     p
-                      | Thank you for signing up for !{locals.websitename}, to get started, we need to verify your email address.
-                    p
-                      | Please activate your account use this code below.
-                    h2
-                      b
-                        center !{locals.emailverificationcode}
+                      | Thank you for signing up. We'll keep you posted on latest product updates, news and special offers.
 
                     p If you have any questions about your account or any other matter, please feel free to contact us at
                     a(href=`mailto:`+locals.helpemail) !{locals.helpemail}
