--- a/themes/stone1.css
+++ b/themes/stone1.css
@@ -1,3 +1,7 @@
+.btnsui{
+  border-radius: 7px !important;
+  height: 47px !important;
+}
 
 /* FIX FOR ALL */
 .ant-tabs-tab {
@@ -88,7 +92,7 @@ border-radius: 7px !important;
 
 
 
-  
+
 
 
 
